# obsidian-agent

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yml  tests.yml
app/: main.py
app/mcp/: __init__.py  oauth.py  server.py
app/vault/: __init__.py  service.py
tests/: __init__.py  test_vault_service.py
